<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_task"
            android:textSize="25sp"
            android:textColor="@color/grey"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/blue"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/no"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/blue"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/yes"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>