<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/new_task"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="sans-serif-condensed"/>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/curr_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/enter_task_name"
                android:singleLine="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textview_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:layout_marginHorizontal="15dp"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/set_deadline_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/task_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_date"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:padding="10dp"
                app:drawableStartCompat="@drawable/calendar_icon"
                app:drawableTint="@color/blue" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:layout_marginHorizontal="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp">

            <ImageView
                android:id="@+id/fire_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="5dp"
                android:src="@drawable/fire"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/fire_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="5dp"
                android:src="@drawable/fire"
                app:tint="@color/grey" />

            <ImageView
                android:id="@+id/fire_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="5dp"
                android:src="@drawable/fire"
                app:tint="@color/grey" />

            <ImageView
                android:id="@+id/fire_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="5dp"
                android:src="@drawable/fire"
                app:tint="@color/grey" />

            <ImageView
                android:id="@+id/fire_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="5dp"
                android:src="@drawable/fire"
                app:tint="@color/grey" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:layout_alignParentStart="true"
                android:background="@color/blue"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:layout_alignParentEnd="true"
                android:background="@color/blue"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>