<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="sans-serif-condensed"/>

        <TextView
            android:id="@+id/ongoing_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingVertical="15dp"
            android:paddingHorizontal="5dp"
            android:text="@string/ongoing"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"/>

        <TextView
            android:id="@+id/completed_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingVertical="15dp"
            android:paddingHorizontal="5dp"
            android:text="@string/completed"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"/>

        <ImageView
            android:id="@+id/new_task"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/new_task"
            android:layout_alignBottom="@id/fragment_container"
            android:layout_alignEnd="@id/fragment_container"
            android:layout_margin="10dp"
            app:tint="@color/blue"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>